--- a/index.css
+++ b/index.css
@@ -20,6 +20,9 @@ h1{
     font-size:2.7rem;
     color: #fff;
 }
+button{
+    cursor: pointer;
+}
 .container {
     width: 60%;
     display: flex;
